Fixing comment reply link visibility.
git-svn-id: https://buddypress.svn.wordpress.org/trunk@2720 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-themes/bp-default/_inc/css/default.css
+++ b/bp-themes/bp-default/_inc/css/default.css
@@ -1295,8 +1295,6 @@ div.activity-comments ul, div.activity-comments ul li {
 			padding: 15px 0 15px 0;
 		}
 
-		div.activity-comments span.acomment-replylink { display: none; }
-
 		div.activity-comments ul li p:last-child {
 			margin-bottom: 0;
 		}
